Agregue estilos al body, padding y margin 0

--- a/example1.html
+++ b/example1.html
@@ -3,6 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Ejercios 1 - Canvas y Javascript</title>
+	<style>
+		body{
+			margin: 0px;
+			padding: 0px;
+		}
+	</style>
 </head>
 <body>
 	<canvas id="myCanvas" width="578" height="200"></canvas>
