Agregue centrado del canvas

--- a/example1.html
+++ b/example1.html
@@ -4,13 +4,12 @@
 	<meta charset="UTF-8">
 	<title>Ejercios 1 - Canvas y Javascript</title>
 	<style>
-		body{
-			margin: 0px;
-			padding: 0px;
-		}
-
 		#myCanvas{
 			background: rgb(106, 28, 178);
+			margin: auto;
+			position: absolute;
+  			top: 25%;
+  			left: 25%;
 		}
 	</style>
 </head>
