Agregue cambio a color de texto canvas a rojo

--- a/example1.html
+++ b/example1.html
@@ -8,8 +8,8 @@
 			background: rgb(106, 28, 178);
 			margin: auto;
 			position: absolute;
+			left: 25%;
   			top: 25%;
-  			left: 25%;
 		}
 	</style>
 </head>
@@ -20,7 +20,7 @@
 	    var context = myCanvas.getContext("2d");
 
 	    context.font = '40pt Calibri';
-	    context.fillStyle = 'blue';
+	    context.fillStyle = 'red';
 	    context.fillText('Hello World!', 150, 100);
 	</script>
 </body>
